update docker & git